fix: Truncate text on mobile to avoid UI break

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -59,3 +59,9 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
+.text-truncate {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
